updated accordion docs, more alignment bug fixing

--- a/packages/spark-core/components/_accordions.scss
+++ b/packages/spark-core/components/_accordions.scss
@@ -26,6 +26,7 @@
 }
 
 .sprk-c-Accordion__summary {
+  align-items: center;
   color: $white;
   display: flex;
   padding: $space-m;
